// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`dual ring renders correctly 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-1 {
  position: relative;
  width: 200px !important;
  height: 200px !important;
  -webkit-transform: translate( -200px,-200px ) scale(1) translate( 200px,200px );
  -ms-transform: translate( -200px,-200px ) scale(1) translate( 200px,200px );
  transform: translate( -200px,-200px ) scale(1) translate( 200px,200px );
}

.emotion-0 {
  position: absolute;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  width: 160px;
  height: 160px;
  top: 20px;
  left: 20px;
  border-radius: 50%;
  border: 8px solid #f08d43;
  border-color: #f08d43 transparent #f08d43 transparent;
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
</div>
`;

exports[`px converts 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: rotate(0deg);
    -ms-transform: rotate(0deg);
    transform: rotate(0deg);
  }

  100% {
    -webkit-transform: rotate(360deg);
    -ms-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

.emotion-0 {
  position: absolute;
  -webkit-animation: animation-0 1s linear infinite;
  animation: animation-0 1s linear infinite;
  width: 160px;
  height: 160px;
  top: 20px;
  left: 20px;
  border-radius: 50%;
  border: 8px solid #f08d43;
  border-color: #f08d43 transparent #f08d43 transparent;
}

.emotion-1 {
  position: relative;
  width: 10em !important;
  height: 10em !important;
  -webkit-transform: translate( -8em,-8em ) scale(0.8) translate( 8em,8em );
  -ms-transform: translate( -8em,-8em ) scale(0.8) translate( 8em,8em );
  transform: translate( -8em,-8em ) scale(0.8) translate( 8em,8em );
}

<div>
  <div
    className="emotion-1"
  >
    <div
      className="emotion-0"
    />
  </div>
</div>
`;
